--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "classnames": "^2.3.2",
     "next": "14.0.1",
+    "normalize.css": "^8.0.1",
     "prettier": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
+    "react-spinners": "^0.13.8",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
+    "axios": "^1.6.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "eslint-config-prettier": "^9.0.0",
