--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "classnames": "^2.3.2",
     "next": "14.0.1",
     "normalize.css": "^8.0.1",
@@ -18,6 +19,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-spinners": "^0.13.8",
     "yup": "^1.3.2"
   },
