JWT token now returns after successful login or registration.

--- a/SweetDreams/API/appsettings.Development.json
+++ b/SweetDreams/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=sweetDreams.db"
-  }
+  },
+  "TokenKey": "super secret unguessable key super secret unguessable key super secret unguessable key"
 }
