--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@effector/next": "^0.6.1",
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@svgr/webpack": "^8.1.0",
     "classnames": "^2.3.2",
     "effector": "^22.8.7",
     "effector-next": "^1.3.3",
