--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "effector": "^22.8.7",
     "effector-next": "^1.3.3",
     "effector-react": "^22.5.4",
+    "gsap": "^3.12.2",
     "next": "14.0.1",
     "normalize.css": "^8.0.1",
     "prettier": "^3.0.3",
