Google authentication ready.

--- a/SweetDreams/API/appsettings.Development.json
+++ b/SweetDreams/API/appsettings.Development.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=sweetDreams.db"
   },
-  "TokenKey": "super secret unguessable key super secret unguessable key super secret unguessable key"
+  "TokenKey": "super secret unguessable key super secret unguessable key super secret unguessable key",
+  "Authentication": {
+    "Google": {
+      "ClientId": "522667021581-rqtn3ij8ss221342i01bhgen7fd3go85.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  }
 }
