--- a/SweetDreams/API/appsettings.Development.json
+++ b/SweetDreams/API/appsettings.Development.json
@@ -13,6 +13,10 @@
     "Google": {
       "ClientId": "522667021581-rqtn3ij8ss221342i01bhgen7fd3go85.apps.googleusercontent.com",
       "ClientSecret": "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"
+    },
+    "SendGrid": {
+      "UserName": "sweetdreams2023777",
+      "SecretKey": "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"
     }
   }
 }
