--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-paginate": "^8.2.0",
+    "react-photo-album": "^2.3.0",
     "react-redux": "^8.1.3",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
