--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-icons": "^4.11.0",
     "react-paginate": "^8.2.0",
     "react-photo-album": "^2.3.0",
+    "react-range": "^1.8.14",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
