--- a/SweetDreams/API/appsettings.Development.json
+++ b/SweetDreams/API/appsettings.Development.json
@@ -6,16 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=sweetDreams.db"
-  },
-  "TokenKey": "super secret unguessable key super secret unguessable key super secret unguessable key",
-  "Authentication": {
-    "Google": {
-      "ClientId": "522667021581-rqtn3ij8ss221342i01bhgen7fd3go85.apps.googleusercontent.com",
-      "ClientSecret": "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"
-    },
-    "SendGrid": {
-      "SecretKey": "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"
-    }
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=postgrespw; Database=candyHeaven"
   }
 }
