--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
     "axios": "^1.6.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1"
+    "eslint-plugin-prettier": "^5.0.1",
+    "typescript": "^5.3.3"
   }
 }
