--- a/package.json
+++ b/package.json
@@ -9,14 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@effector/next": "^0.6.1",
     "@hookform/resolvers": "^3.3.2",
     "@splidejs/react-splide": "^0.7.12",
     "@svgr/webpack": "^8.1.0",
     "classnames": "^2.3.2",
-    "effector": "^22.8.7",
-    "effector-next": "^1.3.3",
-    "effector-react": "^22.5.4",
     "gsap": "^3.12.2",
     "next": "14.0.1",
     "normalize.css": "^8.0.1",
@@ -28,11 +24,11 @@
     "react-paginate": "^8.2.0",
     "react-photo-album": "^2.3.0",
     "react-range": "^1.8.14",
+    "react-rating-stars-component": "^2.2.0",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
-    "slick-carousel": "^1.8.1",
     "swr": "^2.2.4",
     "yup": "^1.3.2",
     "zustand": "^4.4.7"
