--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
         "endOfLine": "auto"
       }
     ],
-    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/quotes": [
       "off",
@@ -23,6 +23,8 @@
         "allowTemplateLiterals": true
       }
     ],
+    "no-unused-vars": "warn",
+    "eqeqeq": "warn",
     "comma-spacing": [2, { "before": false, "after": true }],
     "arrow-spacing": ["warn", { "before": true, "after": true }],
     "space-infix-ops": ["warn", { "int32Hint": false }],
@@ -30,7 +32,8 @@
     "keyword-spacing": [2, { "before": true, "after": true }],
     "react/no-children-prop": "off",
     "react/jsx-no-undef": "warn",
-    "padded-blocks": "warn"
+    "padded-blocks": "off"
+    // "react/jsx-no-undef": "warn",
     // "no-trailing-spaces": [2, { "skipBlankLines": false }],
     // "no-multiple-empty-lines": ["error", { "max": 1, "maxBOF": 1 }],
     // "object-curly-spacing": ["error", "always"],
