--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "swr": "^2.2.4",
     "yup": "^1.3.2",
     "zustand": "^4.4.7"
