--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-photo-album": "^2.3.0",
     "react-range": "^1.8.14",
